# jetson_smart_fan

./: .gitignore  CMakeLists.txt  README.md
config/: pwm_fan.json
services/: jetson_smart_fan.service
src/: CMakeLists.txt  PwmFanMgr.cpp  PwmFanMgr.h  PwmHandler.cpp  PwmHandler.h  ThermalHandler.cpp  ThermalHandler.h  debug.cpp  debug.h  main.cpp
